@@ -13,6 +13,9 @@ by a new interface: ResourceLocator. A default ResourceLocator is installed that
 injector.getInstance(resource.type()). It will only be a few lines of code to add a JNDI version
 of ResourceLocator. Bind ResourceLocator instances via BootstrapBinder.bindResourceLocator().
 
+* LifecycleInjectorBuilder now has a way to add modules as opposed to always specifying the complete
+set.
+
 1.0.4 - January 8, 2013
 =======================
 * WarmUps weren't being run for objects with no dependencies.
